# base-project

./: README.md  pyproject.toml  setup.cfg  setup.py
src/baseproject/: baseproject.py
