[metadata]
name = base-project
author = Gabriel Campanella
author_email = gabe.camp@gmail.com
description = A jumping off point for new python projects
long_description - file : README.md
long_description_content_type = text/markdown
version = attr: src.baseproject.__version__
url = https://github.com/gabe-camp/base-project
license_files = LICENSE.txt
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3.8
  
[options]
python_requires = >= 3.8
packages = find:
package_dir = src

[options.packages.find]
where = src
