[metadata]
name = base-project
author = Gabriel Campanella
author_email = gabe.camp@gmail.com
description = A jumping off point for new python projects
long_description - file : README.md
long_description_content_type = text/markdown
url = https://github.com/gabe-camp/base-project
license_files = LICENSE
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3.8
  
[options]
python_requires = >= 3.8
packages = find:
package_dir = src
install_requires =
  python-semantic-release~=7.16.0
  python-dotenv~=0.17.0

[options.packages.find]
where = src

[flake8]
exclude =
  .git,
  .tox,
  __pycache__,
  build,
  dist,
  *.pyc,
  *.egg-info,
  venv
